better website layout

--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -8,18 +8,17 @@ website:
   repo-url: https://github.com/ajfriend/darkwing
   repo-subdir: docs/
   repo-actions: [edit, issue]
-  navbar:
-    left:
+  sidebar:
+    style: "docked"
+    search: true
+    contents:
       - href: index.qmd
         text: Home
       - about.qmd
       - trips_analysis.qmd
+      - duckdb_stuff.qmd
 
 format:
   html:
     theme: cosmo
     css: styles.css
-    toc: true
-
-
-
