add some linting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,8 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-test = ['pytest', 'pytest-cov']
-dev = ['jupyterlab', 'ipykernel', 'jupyterlab_execute_time', 'ruff']
+test = ['pytest', 'pytest-cov', 'ruff']
+dev = ['jupyterlab', 'ipykernel', 'jupyterlab_execute_time']
 docs = ['matplotlib']
 all = [
     'darkwing[test]',
