--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,3 +29,16 @@ jobs:
 
       - name: Test package
         run: pytest
+
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+      
+      - name: Install package
+        run: pip install .[test]
+
+      - name: Run Linting
+        uses: astral-sh/ruff-action@v3
