set python version

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,6 +36,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
       
       - name: Install package
         run: pip install .[test]
@@ -44,7 +46,7 @@ jobs:
         uses: astral-sh/ruff-action@v3
 
   wheels:
-    name: Build & inspect package.
+    name: Wheels
     runs-on: ubuntu-latest
 
     steps:
@@ -65,7 +67,7 @@ jobs:
         run: |
           pip install dist/darkwing-0.8.0-py3-none-any.whl[test]
 
-      - name: Test sdist
+      - name: Test wheel
         run: pytest
 
       - name: Install from sdist
