--- a/.github/workflows/wheels2.yml
+++ b/.github/workflows/wheels2.yml
@@ -7,8 +7,8 @@ on:
       - main
 
 jobs:
-  build-and-inspect-package:
-    name: Build & inspect package.
+  hynek-build:
+    name: Hynek Build
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
