--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -95,6 +95,6 @@ jobs:
 
       - uses: pypa/gh-action-pypi-publish@v1.10.3
         with:
-          password: ${{ secrets.pypi_password }}
+          password: ${{ secrets.PYPI_DUCKBOAT }}
 
 
