--- a/.github/workflows/pypi_publish.yml
+++ b/.github/workflows/pypi_publish.yml
@@ -1,6 +1,10 @@
-name: tests
+name: pypi_publish
 
 on:
+  pull_request:
+  push:
+    branches:
+      - main
   release:
     types:
       - published
