--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = 'duckboat'
 version = '0.11.0'
-description = 'An experimental data-wrangling library built on DuckDB for pipelining SQL snippets.'
+description = 'A SQL-based Python dataframe library for ergonomic interactive data analysis and exploration.'
 authors = [
     { name = 'AJ Friend', email = 'ajfriend@gmail.com' }
 ]
