--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = 'duckboat'
-version = '0.11.0'
+version = '0.12.0'
 description = 'A SQL-based Python dataframe library for ergonomic interactive data analysis and exploration.'
 authors = [
     { name = 'AJ Friend', email = 'ajfriend@gmail.com' }
@@ -28,7 +28,10 @@ all = [
 ]
 
 [project.urls]
-homepage = 'https://github.com/ajfriend/duckboat'
+homepage   = 'https://github.com/ajfriend/duckboat'
+repository = 'https://github.com/ajfriend/duckboat'
+documentation = 'https://ajfriend.github.io/duckboat'
+pypi = 'https://pypi.org/project/duckboat'
 
 [build-system]
 requires = ['hatchling']
