--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [project]
 name = 'duckboat'
-version = '0.12.0'
+version = '0.13.0'
 description = 'A SQL-based Python dataframe library for ergonomic interactive data analysis and exploration.'
 authors = [
     { name = 'AJ Friend', email = 'ajfriend@gmail.com' }
 ]
-license = 'MIT'
+license = { file = 'LICENSE' }
 keywords = ['data-wrangling', 'duckdb', 'SQL', 'ETL', 'pipelines']
 readme = 'readme.md'
 requires-python = '>=3.9'
