--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,3 +93,10 @@ ignore = [
 include = [
   'src/',
 ]
+
+
+[tool.pytest.ini_options]
+addopts = "--cov=duckboat --cov=tests --cov-report=term-missing --durations=10 --cov-fail-under=70"
+
+[tool.coverage.run]
+omit = []
