--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,7 @@ ignore = [
     'E731',  # Do not assign a `lambda` expression, use a `def`
     # 'PLR2004',
     'A002',
+    'E226',  # Missing whitespace around arithmetic operator
 ]
 
 [tool.ruff.lint.per-file-ignores]
